NLP TP's/texts/robotics/robotics.stackexchange_0000046884.txt
Q:

groovy OSX install fails building opencv2 because LONG_BIT definition appears wrong for platform

Following the instructions at
http://www.ros.org/wiki/groovy/Installation/Source#Building_the_catkin_Workspace
I run
./src/catkin/bin/catkin_make_isolated --install

But it fails.  greping the logs yeilds
Building CXX object modules/python/CMakeFiles/opencv_python.dir/src2/cv2.cpp.o
modules/core/doc/old_basic_structures In file included from /Users/nchalko/ros_catkin_ws/src/opencv2/modules/python/src2/cv2.cpp:1:
In file included from /Library/Frameworks/Python.framework/Headers/Python.h:55:
/Library/Frameworks/Python.framework/Headers/pyport.h:616:2: error: "LONG_BIT definition appears wrong for platform (bad gcc/glibc config?)."
#error "LONG_BIT definition appears wrong for platform (bad gcc/glibc config?)."
 ^

I played with building opencv by hand but never got only got it to work by not building the python part.
Note:
brew install opencv 

works fine
I am running OS X 10.8.2 (12C60)
And using xcode Version 4.5.2 (4G2008a)
I am stuck.  my pthyon + cmake foo is too weak to know were to start.
So how can I get groovy to install opencv2 on my mac.

Originally posted by Nick J Chalko on ROS Answers with karma: 81 on 2013-01-02
Post score: 0

A:

Try using the OSX install instructions ... that might help. Also I don't have this: /Library/Frameworks/Python.framework/Headers/pyport.h ... try uninstalling this, since it seems to be causing problems and this isn't where homebrew installs python modules too.

Originally posted by Kevin with karma: 2962 on 2013-01-03
This answer was ACCEPTED on the original site
Post score: 0

